# zotify

./: .gitignore  INSTALLATION.md  README.md  pyproject.toml  requirements.txt
zotify/: __main__.py  album.py  app.py  config.py  const.py  playlist.py  podcast.py  termoutput.py  track.py  utils.py
