[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotify"
description = "A highly customizable music and podcast downloader"
authors = [
  { name = "Zotify Contributors" },
  { name = "Sincos" },
]
requires-python = ">=3.13"
license = "Unlicense"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["python", "music", "podcast", "downloader"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "librespot @ git+https://github.com/MihaiStreames/librespot-python",
  "ffmpy",
  "music_tag",
  "Pillow",
  "pkce",
  "protobuf==3.20.1",
  "pwinput",
  "tabulate[widechars]",
  "tqdm",
  "setuptools>=80.9.0",
  "wheel>=0.45.1",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "zotify.__version__"}

[project.scripts]
zotify = "zotify.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zotify*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "PL",   # pylint
    "PERF", # perflint
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "RET504",  # Unnecessary assignment before return
    "SIM108",  # Use ternary operator (sometimes reduces readability)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 15
max-returns = 6
max-statements = 50

[tool.mypy]
python_executable = ".venv/bin/python"
python_version = "3.13"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
